# server-client-paint

./: CMakeLists.txt  Paint_client.cpp  Paint_dot.cpp  Paint_network.cpp  Paint_network.h  Paint_server.cpp  Paint_socket.h  README.md  main.cpp
